--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
   <link rel="icon" type="image/png" href="site-icon.jpg" />
  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
  
