--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
  
   <section id="about">
     <div class="page about-page">
+      <div class="flex-container">
         <div class="about-img-wrapper">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" class="blob">
             <defs>
@@ -98,7 +99,7 @@
 
 
         </svg>
-        
+      </div> 
         </div>
         <div class="about-page-text hide">
             <h2>About Me</h2>
