--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   
   
   <div class="hero-section">
-    <div class="spline-animation" style="position: absolute; z-index: 1;">
+    <div class="spline-animation" style="position: absolute; z-index: 1; width: 100vw; height: 100vh;">
         <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.383/build/spline-viewer.js"></script>
-        <spline-viewer url="https://prod.spline.design/918CwMhv97VtNnWx/scene.splinecode"></spline-viewer>
+        <spline-viewer style="width: 100%; height: 100%; object-fit: cover;" url="https://prod.spline.design/918CwMhv97VtNnWx/scene.splinecode"></spline-viewer>
     </div>
     <div class="hero-text" style="position: relative; z-index: 2;">
         <section class="hero fade-in">
